Update for website
Reorganized website. Testing changes

--- a/index.html
+++ b/index.html
@@ -1,197 +1,267 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Ted Lim's Portfolio Website</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
 
-		<!-- Header -->
-			<section id="header">
-				<header>
-					<span class="image avatar"><img src="images/my_imgs/Profile.png" alt="" /></span>
-					<h1 id="logo">Ted Lim</h1>
-					<p> Where I show people what I've been up to.</p>
-				</header>
-				<nav id="nav">
-					<ul>
-						<li><a href="#About Me" class="active">About Me</a></li>
-						<li><a href="#Games">Game Development</a></li>
-						<li><a href="#Spreadsheets">System Spreadsheets</a></li>
-						<li><a href="#Breakdowns">Game Analyses</a></li>						
-						<li><a href="#Projects">More Content & Projects</a></li>
-					</ul>
-				</nav>
-				<footer>
-					<h1>Contact Me</h1>
-					<ul class="icons fa-fw">
-						<li><a href="mailto:tedlim@alumni.stanford.edu?Subject=Hello" target="_top" class="icon fa-envelope">tedlim@alumni.stanford.edu</a></li>
-						<li><a href="https://www.linkedin.com/in/tedglim/" class="icon fa-linkedin">www.linkedin.com/in/tedglim/</a></li>
-					</ul>
-				</footer>
+<head>
+	<title>Ted Lim's Portfolio Website</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+</head>
+
+<body class="is-preload">
+
+	<!-- Header -->
+	<section id="header">
+		<header>
+			<span class="image avatar"><img src="images/my_imgs/Profile.png" alt="" /></span>
+			<h1 id="logo">TED LIM</h1>
+			<p> Here's what I've been up to.</p>
+		</header>
+		<nav id="nav">
+			<ul>
+				<!-- <li><a href="#About Me" class="active">ABOUT ME</a></li> -->
+				<li><a href="#Work">WORK EXPERIENCE</a></li>
+				<li><a href="#Games"> GAME DEVELOPMENT </a></li>
+				<li><a href="#Teardowns"> GAME TEARDOWNS </a></li>
+				<li><a href="#Spreadsheets"> SPREADSHEET TOOLS </a></li>
+				<li><a href="#Projects"> MORE PROJECTS </a></li>
+			</ul>
+		</nav>
+		<footer>
+			<h1>CONTACT ME</h1>
+			<ul class="icons fa-fw">
+				<li><a href="mailto:tedlim@alumni.stanford.edu?Subject=Hello" target="_top"
+						class="icon fa-envelope">tedlim@alumni.stanford.edu</a></li>
+				<li><a href="https://www.linkedin.com/in/tedglim/"
+						class="icon fa-linkedin">www.linkedin.com/in/tedglim/</a></li>
+			</ul>
+		</footer>
+	</section>
+
+	<!-- Wrapper -->
+	<div id="wrapper">
+		<!-- Main -->
+		<div id="main">
+			<!-- Me -->
+			<section id="About Me">
+				<div class="image main" data-position="center">
+					<img src="images/my_imgs/Hallway_Resize.png" alt="" />
+				</div>
+				<div class="container">
+					<header class="major">
+						<h2>TED LIM</h2>
+						<p>GAME DESIGNER</p>
+					</header>
+				</div>
 			</section>
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-				<!-- Main -->
-					<div id="main">
-						<!-- Me -->
-							<section id="About Me">
-								<div class="image main" data-position="center">
-									<img src="images/my_imgs/Hallway_Resize.png" alt="" />
-								</div>
-								<div class="container">
-									<header class="major">
-										<h2>Ted Lim</h2>
-										<p>Game Designer</p>
-									</header>
-									<p>Always trying to learn how to make things fun.</p>
-								</div>
-							</section>
-						<!-- Games -->
-							<section id="Games">
-								<div class="container">
-									<h3>Game Development</h3>
-									<div class="features">
-										<article>
-											<h4>All-Clear</h4>
-											<a href="https://demastte.itch.io/all-clear" class="image"><img src="gifs/AllClear.gif" alt="" /></a>
-											<br clear="all" />
-											<br clear="all" />
-											<p>A strategic Match3 puzzle game. Skillfully match orbs to clear challenging levels before you run out of moves. <a href="https://demastte.itch.io/all-clear">Click here to play!</a></p>
-										</article>
-										<article>
-											<h4>Target Blaster</h4>
-											<a href="https://simmer.io/@demastte/target-blaster" class="image"><img src="gifs/FPSDemo.gif" alt="" /></a>
-											<br clear="all" />
-											<br clear="all" />
-											<p>An FPS target practice game. Complete each level by defeating all of the target dummies. <a href="https://simmer.io/@demastte/target-blaster">Click here to play!</a></p>
-										</article>
-										<article>
-											<h4>Pickin' Up Cash</h4>
-											<a href="https://simmer.io/@demastte/pickin-up-cash" class="image"><img src="gifs/CashDemo.gif" alt="" /></a>
-											<br clear="all" />
-											<br clear="all" />
-											<p>A money themed browser game submitted for the <a href="https://simmer.io/c/simmerjam2">SimmerJam2</a> weekend long game jam. <a href="https://simmer.io/@demastte/pickin-up-cash">Click here to play!</a></p>
-										</article>
-										<article>
-											<h4>Shoot and Clear</h4>
-											<a href="https://simmer.io/@demastte/shoot-and-clear" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a>
-											<br clear="all" />
-											<br clear="all" />
-											<p>A 2D action-survival platformer. Earn points by collecting gems from your defeated enemies. <a href="https://simmer.io/@demastte/shoot-and-clear">Click here to play!</a></p>
-										</article>
-										<article>
-											<h4>Graybox Rush</h4>
-											<a href="https://simmer.io/@demastte/graybox-rush" class="image"><img src="gifs/EndlessRunner.gif" alt="" /></a>
-											<br clear="all" />
-											<br clear="all" />
-											<p>A 2D endless runner. Collect coins to earn points and aim for a high score. <a href="https://simmer.io/@demastte/graybox-rush">Click here to play!</a></p>
-										</article>
-									</div>
-								</div>
-							</section>
-						<!-- Spreadsheets -->
-							<section id="Spreadsheets">
-								<div class="container">
-									<h3>System Spreadsheets</h3>
-									<div class="features">
-										<article>
-											<a href="https://docs.google.com/spreadsheets/d/19S0P08olgXpqN2oeONCmeB6F9OpbGYA1Kj6QS29LVaQ/edit?usp=sharing" class="image"><img src="images/my_imgs/Crafting.png" alt="" /></a>
-											<div class="inner">
-												<h4>Crafting & Loot Crate System</h4>
-												<p>Estimates how long it takes to gather enough resources to craft an item via opening loot boxes. You can try it out <a href="https://docs.google.com/spreadsheets/d/19S0P08olgXpqN2oeONCmeB6F9OpbGYA1Kj6QS29LVaQ/edit?usp=sharing">here</a>.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing" class="image"><img src="images/my_imgs/deck_optimizer.png" alt="" /></a>
-											<div class="inner">
-												<h4>TCG/CCG Deck Optimizer</h4>
-												<p>Calculates the % chance to get certain card combinations in an opening hand based on a deck's card ratios. You can try it out <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
-											</div>
-										</article>	
-										<article>
-											<a href="https://docs.google.com/spreadsheets/d/1ibEnJKZqK8DTy7uqBEyR-TiA5i6CQMK0LmzL-IiPCyY/edit?usp=sharing" class="image"><img src="images/my_imgs/fe3h_stats.png" alt="" /></a>
-											<div class="inner">
-												<h4>Character Stats Calculator</h4>
-												<p>Estimates FE3H character stats at a given level based on class and natural stat progression. You can try it out <a href="https://docs.google.com/spreadsheets/d/1ibEnJKZqK8DTy7uqBEyR-TiA5i6CQMK0LmzL-IiPCyY/edit?usp=sharing">here</a>.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-						<!-- Breakdowns -->
-							<section id="Breakdowns">
-								<div class="container">
-									<h3>Game Analyses</h3>
-									<div class="features">
-										<article>
-											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
-											<div class="inner">
-												<h4>Golf Clash Teardown</h4>
-												<p>A deconstruction of Playdemic's realtime mobile golf game. Details <a href="documents/Golf_Clash.pdf">here</a>.</p>
-											</div>
-										</article>
-										<article>
-											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
-											<div class="inner">
-												<h4>Langrisser Mobile Teardown</h4>
-												<p>A deep-dive into a mobile tactics RPG game by ZlongGames. Details <a href="documents/Langrisser.pdf">here</a>.</p>
-											</div>
-										</article>
-										<article>
-											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
-											<div class="inner">
-												<h4>Cookie Jam Blast Teardown</h4>
-												<p>An analysis of the sequel to Jam City's popular mobile title Cookie Jam. Details <a href="documents/Cookie_Jam_Blast.pdf">here</a>.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration" class="image"><img src="images/my_imgs/PokemonCharts.png" alt="" /></a>
-											<div class="inner">
-												<h4>Pokemon Data Exploration</h4>
-												<p>An exploration of Pokemon data to discover meaningful trends among Pokemon. Details <a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration">here</a>.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-						<!-- More Projects -->
-							<section id="Projects">
-								<div class="container">
-									<h3>More Content & Projects</h3>
-									<div class="features">
-										<article>
-											<a href="https://github.com/tedglim" class="image"><img src="images/cpyrght_imgs/GitHub_Logo.png" alt="" /></a>
-											<div class="inner">
-												<p>You can find more content and projects on my Github <a href="https://github.com/tedglim">here</a>.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>						
+			<!-- Work Experience -->
+			<section id="Work Experience">
+				<div class="container">
+					<h3>WORK EXPERIENCE</h3>
+					<div class="features">
+						<article>
+							<h4>TECHNICAL DESIGNER, I GOT GAMES (IGG)</h4>
+							<a href="https://www.igg.com/" class="image"><img src="images/cpyrght_imgs/igg.png"
+									alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Created marketing advertisements for the high-profile mobile title <a
+									href="http://lordsmobile.igg.com/">LORDS MOBILE</a> using Unity.<br />
+								<a href="https://github.com/tedglim/IGG/blob/main/README.md"> CLICK HERE </a> to view
+								some of my work.
+							</p>
+						</article>
+						<article>
+							<h4>ASSOCIATE GAME DESIGNER, NETEASE NORTH AMERICA</h4>
+							<a href="https://netease-na.com/" class="image"><img src="images/cpyrght_imgs/NetEase.png"
+									alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Worked on multiple mobile game projects from the prototyping to alpha stages. <br />
+								<a href="https://github.com/tedglim/NETEASE/blob/main/README.md"> CLICK HERE </a> to
+								view some of my work.
+							</p>
+						</article>
+						<article>
+							<h4>SOFTWARE ENGINEER INTERN, ACME TICKETING </h4>
+							<a href="https://www.acmeticketing.com/" class="image"><img
+									src="images/cpyrght_imgs/ACME.png" alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Programmed internal dev op tools and payment processor flows. </p>
+						</article>
 					</div>
+				</div>
+			</section>
+			<!-- Games -->
+			<section id="Games">
+				<div class="container">
+					<h3>GAME DEVELOPMENT</h3>
+					<p> These are some of my independently-made games. </p>
+					<div class="features">
+						<article>
+							<h4>ALL-CLEAR</h4>
+							<a href="https://demastte.itch.io/all-clear" class="image"><img src="gifs/AllClear.gif"
+									alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p>A strategic Match3 puzzle game. Match orbs to clear the levels before you run out of
+								moves. <br /><a href="https://demastte.itch.io/all-clear"> CLICK HERE </a> to play! </p>
+						</article>
+						<article>
+							<h4>TARGET BLASTER</h4>
+							<a href="https://simmer.io/@demastte/target-blaster" class="image"><img
+									src="gifs/FPSDemo.gif" alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p>An FPS target practice game. Complete each level by defeating all of the target dummies.
+								<br /><a href="https://simmer.io/@demastte/target-blaster"> CLICK HERE </a> to play!
+							</p>
+						</article>
+						<!-- <article>
+							<h4>Pickin' Up Cash</h4>
+							<a href="https://simmer.io/@demastte/pickin-up-cash" class="image"><img
+									src="gifs/CashDemo.gif" alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p>A money themed browser game submitted for the <a
+									href="https://simmer.io/c/simmerjam2">SimmerJam2</a> weekend long game jam. <a
+									href="https://simmer.io/@demastte/pickin-up-cash">Click here to play!</a></p>
+						</article> -->
+					</div>
+				</div>
+			</section>
+			<!-- Breakdowns -->
+			<section id="Teardowns">
+				<div class="container">
+					<h3>GAME TEARDOWNS</h3>
+					<p> These are some of my analyses of free-to-play mobile games that looks at what makes these games
+						work. </p>
+					<div class="features">
+						<article>
+							<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img
+									src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
+							<div class="inner">
+								<h4>GOLF CLASH TEARDOWN</h4>
+								<p>A deconstruction of Playdemic's realtime mobile golf game. <br /><a
+										href="documents/Golf_Clash.pdf"> CLICK HERE</a> for details.</p>
+							</div>
+						</article>
+						<article>
+							<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img
+									src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
+							<div class="inner">
+								<h4>LANGRISSER MOBILE TEARDOWN</h4>
+								<p>A deep-dive into a mobile tactics RPG game by ZlongGames. <br /><a
+										href="documents/Langrisser.pdf">CLICK HERE</a> for details.</p>
+							</div>
+						</article>
+						<article>
+							<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img
+									src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
+							<div class="inner">
+								<h4>COOKIE JAM BLAST TEARDOWN</h4>
+								<p>An analysis of the sequel to Jam City's popular mobile title Cookie Jam. <br /><a
+										href="documents/Cookie_Jam_Blast.pdf">CLICK HERE</a> for details.</p>
+							</div>
+						</article>
+						<!-- <article>
+							<a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration"
+								class="image"><img src="images/my_imgs/PokemonCharts.png" alt="" /></a>
+							<div class="inner">
+								<h4>Pokemon Data Exploration</h4>
+								<p>An exploration of Pokemon data to discover meaningful trends among Pokemon. Details
+									<a
+										href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration">here</a>.
+								</p>
+							</div>
+						</article> -->
+					</div>
+				</div>
+			</section>
+			<!-- Spreadsheets -->
+			<section id="Spreadsheets">
+				<div class="container">
+					<h3>SPREADSHEET TOOLS</h3>
+					<p> A collection of tools I made with spreadsheets to help inform gameplay decision-making. </p>
+					<div class="features">
+						<article>
+							<a href="https://docs.google.com/spreadsheets/d/19S0P08olgXpqN2oeONCmeB6F9OpbGYA1Kj6QS29LVaQ/edit?usp=sharing"
+								class="image"><img src="images/my_imgs/Crafting.png" alt="" /></a>
+							<div class="inner">
+								<h4>CRAFTING & LOOT CRATE SYSTEM</h4>
+								<p>Estimates how long it takes to gather enough resources to craft an item via opening
+									loot boxes. <br /><a
+										href="https://docs.google.com/spreadsheets/d/19S0P08olgXpqN2oeONCmeB6F9OpbGYA1Kj6QS29LVaQ/edit?usp=sharing">
+										CLICK HERE </a> to try it out.
+								</p>
+							</div>
+						</article>
+						<article>
+							<a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing"
+								class="image"><img src="images/my_imgs/deck_optimizer.png" alt="" /></a>
+							<div class="inner">
+								<h4>TCG/CCG DECK OPTIMIZER</h4>
+								<p>Calculates the % chance to get certain card combinations in an opening hand based on
+									a deck's card ratios. <br /><a
+										href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">
+										CLICK HERE </a> to try it out.
+								</p>
+							</div>
+						</article>
+						<article>
+							<a href="https://docs.google.com/spreadsheets/d/1ibEnJKZqK8DTy7uqBEyR-TiA5i6CQMK0LmzL-IiPCyY/edit?usp=sharing"
+								class="image"><img src="images/my_imgs/fe3h_stats.png" alt="" /></a>
+							<div class="inner">
+								<h4>CHARACTER STATS CALCULATOR</h4>
+								<p>Estimates FE3H character stats at a given level based on class and natural stat
+									progression. <br /><a
+										href="https://docs.google.com/spreadsheets/d/1ibEnJKZqK8DTy7uqBEyR-TiA5i6CQMK0LmzL-IiPCyY/edit?usp=sharing">
+										CLICK HERE </a> to try it out.
+								</p>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
+			<!-- More Projects -->
+			<section id="Projects">
+				<div class="container">
+					<h3> MORE PROJECTS </h3>
+					<div class="features">
+						<article>
+							<a href="https://github.com/tedglim" class="image"><img
+									src="images/cpyrght_imgs/GitHub_Logo.png" alt="" /></a>
+							<div class="inner">
+								<p>You can find more content and projects on my Github <a
+										href="https://github.com/tedglim">here</a>.</p>
+							</div>
+						</article>
+					</div>
+				</div>
+			</section>
+		</div>
 
-				<!-- Footer -->
-					<section id="footer">
-						<div class="container">
-							<ul class="copyright">
-								<li>&copy; Ted Lim. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
+		<!-- Footer -->
+		<section id="footer">
+			<div class="container">
+				<ul class="copyright">
+					<li>&copy; Ted Lim. All rights reserved.</li>
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
 			</div>
+		</section>
+	</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
