updated CRK teardown
title

--- a/index.html
+++ b/index.html
@@ -135,9 +135,17 @@
 			<section id="Teardowns">
 				<div class="container">
 					<h3>GAME TEARDOWNS</h3>
-					<p> These are some of my analyses of free-to-play mobile games that looks at what makes these games
-						work. </p>
+					<p> These are analyses of F2P mobile games that look at what makes these games work. </p>
 					<div class="features">
+						<article>
+							<a href="documents/Cookie Run_ Kingdom.pdf" type="application/pdf" class="image"><img
+									src="images/cpyrght_imgs/CRKTitle.png" alt="" /></a>
+							<div class="inner">
+								<h4>COOKIE RUN: KINGDOM TEARDOWN</h4>
+								<p>A breakdown of Devsister's recent success with this RPG Autobattler & City builder. <br /><a
+										href="documents/Cookie Run_ Kingdom.pdf"> CLICK HERE</a> for details.</p>
+							</div>
+						</article>
 						<article>
 							<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img
 									src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
