fix broken link
Title

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				</div>
 			</section>
 			<!-- Work Experience -->
-			<section id="Work Experience">
+			<section id="Work">
 				<div class="container">
 					<h3>WORK EXPERIENCE</h3>
 					<div class="features">
