updated teardowns and reorganized webpage
title

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 		<header>
 			<span class="image avatar"><img src="images/my_imgs/Profile.png" alt="" /></span>
 			<h1 id="logo">TED LIM</h1>
-			<p> Here's what I've been up to.</p>
+			<!-- <p> Here's what I've been up to.</p> -->
 		</header>
 		<nav id="nav">
 			<ul>
 				<!-- <li><a href="#About Me" class="active">ABOUT ME</a></li> -->
-				<li><a href="#Work">WORK EXPERIENCE</a></li>
 				<li><a href="#Games"> GAME DEVELOPMENT </a></li>
 				<li><a href="#Teardowns"> GAME TEARDOWNS </a></li>
 				<li><a href="#Spreadsheets"> SPREADSHEET TOOLS </a></li>
+				<li><a href="#Work">WORK EXPERIENCE</a></li>
 				<li><a href="#Projects"> MORE PROJECTS </a></li>
 			</ul>
 		</nav>
@@ -37,7 +37,6 @@
 			</ul>
 		</footer>
 	</section>
-
 	<!-- Wrapper -->
 	<div id="wrapper">
 		<!-- Main -->
@@ -52,45 +51,7 @@
 						<h2>TED LIM</h2>
 						<p>GAME DESIGNER</p>
 					</header>
-				</div>
-			</section>
-			<!-- Work Experience -->
-			<section id="Work">
-				<div class="container">
-					<h3>WORK EXPERIENCE</h3>
-					<div class="features">
-						<article>
-							<h4>TECHNICAL DESIGNER, I GOT GAMES (IGG)</h4>
-							<a href="https://www.igg.com/" class="image"><img src="images/cpyrght_imgs/igg.png"
-									alt="" /></a>
-							<br clear="all" />
-							<br clear="all" />
-							<p> Created marketing advertisements for the high-profile mobile title <a
-									href="http://lordsmobile.igg.com/">LORDS MOBILE</a> using Unity.<br />
-								<a href="https://github.com/tedglim/IGG/blob/main/README.md"> CLICK HERE </a> to view
-								some of my work.
-							</p>
-						</article>
-						<article>
-							<h4>ASSOCIATE GAME DESIGNER, NETEASE NORTH AMERICA</h4>
-							<a href="https://netease-na.com/" class="image"><img src="images/cpyrght_imgs/NetEase.png"
-									alt="" /></a>
-							<br clear="all" />
-							<br clear="all" />
-							<p> Worked on multiple mobile game projects from the prototyping to alpha stages. <br />
-								<a href="https://github.com/tedglim/NETEASE/blob/main/README.md"> CLICK HERE </a> to
-								view some of my work.
-							</p>
-						</article>
-						<article>
-							<h4>SOFTWARE ENGINEER INTERN, ACME TICKETING </h4>
-							<a href="https://www.acmeticketing.com/" class="image"><img
-									src="images/cpyrght_imgs/ACME.png" alt="" /></a>
-							<br clear="all" />
-							<br clear="all" />
-							<p> Programmed internal dev op tools and payment processor flows. </p>
-						</article>
-					</div>
+					<p>Investigator. Experimenter. Go-Getter.</p>
 				</div>
 			</section>
 			<!-- Games -->
@@ -147,24 +108,6 @@
 							</div>
 						</article>
 						<article>
-							<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img
-									src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
-							<div class="inner">
-								<h4>GOLF CLASH TEARDOWN</h4>
-								<p>A deconstruction of Playdemic's realtime mobile golf game. <br /><a
-										href="documents/Golf_Clash.pdf"> CLICK HERE</a> for details.</p>
-							</div>
-						</article>
-						<article>
-							<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img
-									src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
-							<div class="inner">
-								<h4>LANGRISSER MOBILE TEARDOWN</h4>
-								<p>A deep-dive into a mobile tactics RPG game by ZlongGames. <br /><a
-										href="documents/Langrisser.pdf">CLICK HERE</a> for details.</p>
-							</div>
-						</article>
-						<article>
 							<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img
 									src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
 							<div class="inner">
@@ -173,6 +116,25 @@
 										href="documents/Cookie_Jam_Blast.pdf">CLICK HERE</a> for details.</p>
 							</div>
 						</article>
+						<article>
+							<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img
+									src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
+							<div class="inner">
+								<h4>GOLF CLASH TEARDOWN</h4>
+								<p>A deconstruction of Playdemic's realtime mobile golf game. <br /><a
+										href="documents/Golf_Clash.pdf"> CLICK HERE</a> for details.</p>
+							</div>
+						</article>
+						<!-- <article>
+							<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img
+									src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
+							<div class="inner">
+								<h4>LANGRISSER MOBILE TEARDOWN</h4>
+								<p>A deep-dive into a mobile tactics RPG game by ZlongGames. <br /><a
+										href="documents/Langrisser.pdf">CLICK HERE</a> for details.</p>
+							</div>
+						</article> -->
+
 						<!-- <article>
 							<a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration"
 								class="image"><img src="images/my_imgs/PokemonCharts.png" alt="" /></a>
@@ -228,6 +190,45 @@
 										CLICK HERE </a> to try it out.
 								</p>
 							</div>
+						</article>
+					</div>
+				</div>
+			</section>
+			<!-- Work Experience -->
+			<section id="Work">
+				<div class="container">
+					<h3>WORK EXPERIENCE</h3>
+					<div class="features">
+						<article>
+							<h4>TECHNICAL DESIGNER, I GOT GAMES (IGG)</h4>
+							<a href="https://www.igg.com/" class="image"><img src="images/cpyrght_imgs/igg.png"
+									alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Created marketing advertisements for the high-profile mobile title <a
+									href="http://lordsmobile.igg.com/">LORDS MOBILE</a> using Unity.<br />
+								<a href="https://github.com/tedglim/IGG/blob/main/README.md"> CLICK HERE </a> to view
+								some of my work.
+							</p>
+						</article>
+						<article>
+							<h4>ASSOCIATE GAME DESIGNER, NETEASE NORTH AMERICA</h4>
+							<a href="https://netease-na.com/" class="image"><img src="images/cpyrght_imgs/NetEase.png"
+									alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Worked on multiple mobile game projects from the prototyping to alpha stages. <br />
+								<a href="https://github.com/tedglim/NETEASE/blob/main/README.md"> CLICK HERE </a> to
+								view some of my work.
+							</p>
+						</article>
+						<article>
+							<h4>SOFTWARE ENGINEER INTERN, ACME TICKETING </h4>
+							<a href="https://www.acmeticketing.com/" class="image"><img
+									src="images/cpyrght_imgs/ACME.png" alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Programmed internal dev op tools and payment processor flows. </p>
 						</article>
 					</div>
 				</div>
