Added GI Teardown
title. Also included Pokemon data exploration

--- a/index.html
+++ b/index.html
@@ -99,15 +99,24 @@
 					<p> These are analyses of F2P mobile games that look at what makes these games work. </p>
 					<div class="features">
 						<article>
+							<a href="documents/Genshin_Exploration.pdf" type="application/pdf" class="image"><img
+									src="images/cpyrght_imgs/GenshinExplorationThumbnail.png" alt="" /></a>
+							<div class="inner">
+								<h4>GENSHIN IMPACT: EXPLORING EXPLORATION</h4>
+								<p>A discourse on exploration in Genshin Impact that analyzes how it succeeds and how it can be better.<br /><a
+										href="documents/Genshin_Exploration.pdf"> CLICK HERE</a> for details.</p>
+							</div>
+						</article>
+						<article>
 							<a href="documents/Cookie Run_ Kingdom.pdf" type="application/pdf" class="image"><img
-									src="images/cpyrght_imgs/CRKTitle.png" alt="" /></a>
+									src="images/cpyrght_imgs/CRK/CRK_Logo.png" alt="" /></a>
 							<div class="inner">
 								<h4>COOKIE RUN: KINGDOM TEARDOWN</h4>
 								<p>A breakdown of Devsister's recent success with this RPG Autobattler & City builder. <br /><a
 										href="documents/Cookie Run_ Kingdom.pdf"> CLICK HERE</a> for details.</p>
 							</div>
 						</article>
-						<article>
+						<!-- <article>
 							<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img
 									src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
 							<div class="inner">
@@ -115,7 +124,7 @@
 								<p>An analysis of the sequel to Jam City's popular mobile title Cookie Jam. <br /><a
 										href="documents/Cookie_Jam_Blast.pdf">CLICK HERE</a> for details.</p>
 							</div>
-						</article>
+						</article> -->
 						<article>
 							<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img
 									src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
@@ -134,7 +143,6 @@
 										href="documents/Langrisser.pdf">CLICK HERE</a> for details.</p>
 							</div>
 						</article> -->
-
 						<!-- <article>
 							<a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration"
 								class="image"><img src="images/my_imgs/PokemonCharts.png" alt="" /></a>
@@ -238,6 +246,17 @@
 				<div class="container">
 					<h3> MORE PROJECTS </h3>
 					<div class="features">
+						<article>
+							<a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration"
+								class="image"><img src="images/my_imgs/PokemonCharts.png" alt="" /></a>
+							<div class="inner">
+								<h4>Pokemon Data Exploration</h4>
+								<p>An exploration of Pokemon data to discover meaningful trends among Pokemon. Details
+									<a
+										href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration">here</a>.
+								</p>
+							</div>
+						</article>
 						<article>
 							<a href="https://github.com/tedglim" class="image"><img
 									src="images/cpyrght_imgs/GitHub_Logo.png" alt="" /></a>
