Added pcoket champs teardown
title.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,15 @@
 					<p> These are analyses of F2P mobile games that look at what makes these games work. </p>
 					<div class="features">
 						<article>
+							<a href="documents/Pocket _Champs.pdf" type="application/pdf" class="image"><img
+									src="images/cpyrght_imgs/PocketChampsThumb.png" alt="" /></a>
+							<div class="inner">
+								<h4>POCKET CHAMPS: A HYBRID CASUAL</h4>
+								<p>A case study on how hypercasual games have been evolving their gameplay and monetization.<br /><a
+										href="documents/Pocket _Champs.pdf"> CLICK HERE</a> for details.</p>
+							</div>
+						</article>
+						<article>
 							<a href="documents/Genshin_Exploration.pdf" type="application/pdf" class="image"><img
 									src="images/cpyrght_imgs/GenshinExplorationThumbnail.png" alt="" /></a>
 							<div class="inner">
@@ -125,13 +134,21 @@
 										href="documents/Cookie_Jam_Blast.pdf">CLICK HERE</a> for details.</p>
 							</div>
 						</article> -->
-						<article>
+						<!-- <article>
 							<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img
 									src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
 							<div class="inner">
 								<h4>GOLF CLASH TEARDOWN</h4>
 								<p>A deconstruction of Playdemic's realtime mobile golf game. <br /><a
 										href="documents/Golf_Clash.pdf"> CLICK HERE</a> for details.</p>
+							</div>
+						</article> -->
+						<article>
+							<a href="https://github.com/tedglim" class="image"><img
+									src="images/cpyrght_imgs/GitHub_Logo.png" alt="" /></a>
+							<div class="inner">
+								<p>You can find more teardowns on my Github <a
+										href="https://github.com/tedglim/GameTeardowns">here</a>.</p>
 							</div>
 						</article>
 						<!-- <article>
