--- a/index.html
+++ b/index.html
@@ -225,6 +225,16 @@
 					<h3>WORK EXPERIENCE</h3>
 					<div class="features">
 						<article>
+							<h4>GAME DESIGNER, HIDDEN VARIABLE STUDIOS (HVS)</h4>
+							<a href="https://www.hiddenvariable.com" class="image"><img src="images/cpyrght_imgs/igg.png"
+									alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Designed Live Ops content for <a href="https://www.hiddenvariable.com/">Skullgirls Mobile</a> and worked on <br />
+								UI/UX, Level, and general Gameplay Design for <a href="https://spellomancer.com/">Spellomancer.</a>
+							</p>
+						</article>
+						<article>
 							<h4>TECHNICAL DESIGNER, I GOT GAMES (IGG)</h4>
 							<a href="https://www.igg.com/" class="image"><img src="images/cpyrght_imgs/igg.png"
 									alt="" /></a>
