--- a/index.html
+++ b/index.html
@@ -92,6 +92,55 @@
 					</div>
 				</div>
 			</section>
+			<!-- Work Experience -->
+			<section id="Work">
+				<div class="container">
+					<h3>WORK EXPERIENCE</h3>
+					<div class="features">
+						<article>
+							<h4>GAME DESIGNER, HIDDEN VARIABLE STUDIOS (HVS)</h4>
+							<a href="https://www.hiddenvariable.com" class="image"><img src="images/cpyrght_imgs/HVS.png"
+									alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Designed Live Ops content for <a href="https://www.hiddenvariable.com/">Skullgirls Mobile</a> and worked on <br />
+								UI/UX, Level, and general Gameplay Design for <a href="https://spellomancer.com/">Spellomancer.</a>
+							</p>
+						</article>
+						<article>
+							<h4>TECHNICAL DESIGNER, I GOT GAMES (IGG)</h4>
+							<a href="https://www.igg.com/" class="image"><img src="images/cpyrght_imgs/igg.png"
+									alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Created marketing advertisements for the high-profile mobile title <a
+									href="http://lordsmobile.igg.com/">LORDS MOBILE</a> using Unity.<br />
+								<a href="https://github.com/tedglim/IGG/blob/main/README.md"> CLICK HERE </a> to view
+								some of my work.
+							</p>
+						</article>
+						<article>
+							<h4>ASSOCIATE GAME DESIGNER, NETEASE NORTH AMERICA</h4>
+							<a href="https://netease-na.com/" class="image"><img src="images/cpyrght_imgs/NetEase.png"
+									alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Worked on multiple mobile game projects from the prototyping to alpha stages. <br />
+								<a href="https://github.com/tedglim/NETEASE/blob/main/README.md"> CLICK HERE </a> to
+								view some of my work.
+							</p>
+						</article>
+						<article>
+							<h4>SOFTWARE ENGINEER INTERN, ACME TICKETING </h4>
+							<a href="https://www.acmeticketing.com/" class="image"><img
+									src="images/cpyrght_imgs/ACME.png" alt="" /></a>
+							<br clear="all" />
+							<br clear="all" />
+							<p> Programmed internal dev op tools and payment processor flows. </p>
+						</article>
+					</div>
+				</div>
+			</section>
 			<!-- Breakdowns -->
 			<section id="Teardowns">
 				<div class="container">
@@ -215,55 +264,6 @@
 										CLICK HERE </a> to try it out.
 								</p>
 							</div>
-						</article>
-					</div>
-				</div>
-			</section>
-			<!-- Work Experience -->
-			<section id="Work">
-				<div class="container">
-					<h3>WORK EXPERIENCE</h3>
-					<div class="features">
-						<article>
-							<h4>GAME DESIGNER, HIDDEN VARIABLE STUDIOS (HVS)</h4>
-							<a href="https://www.hiddenvariable.com" class="image"><img src="images/cpyrght_imgs/igg.png"
-									alt="" /></a>
-							<br clear="all" />
-							<br clear="all" />
-							<p> Designed Live Ops content for <a href="https://www.hiddenvariable.com/">Skullgirls Mobile</a> and worked on <br />
-								UI/UX, Level, and general Gameplay Design for <a href="https://spellomancer.com/">Spellomancer.</a>
-							</p>
-						</article>
-						<article>
-							<h4>TECHNICAL DESIGNER, I GOT GAMES (IGG)</h4>
-							<a href="https://www.igg.com/" class="image"><img src="images/cpyrght_imgs/igg.png"
-									alt="" /></a>
-							<br clear="all" />
-							<br clear="all" />
-							<p> Created marketing advertisements for the high-profile mobile title <a
-									href="http://lordsmobile.igg.com/">LORDS MOBILE</a> using Unity.<br />
-								<a href="https://github.com/tedglim/IGG/blob/main/README.md"> CLICK HERE </a> to view
-								some of my work.
-							</p>
-						</article>
-						<article>
-							<h4>ASSOCIATE GAME DESIGNER, NETEASE NORTH AMERICA</h4>
-							<a href="https://netease-na.com/" class="image"><img src="images/cpyrght_imgs/NetEase.png"
-									alt="" /></a>
-							<br clear="all" />
-							<br clear="all" />
-							<p> Worked on multiple mobile game projects from the prototyping to alpha stages. <br />
-								<a href="https://github.com/tedglim/NETEASE/blob/main/README.md"> CLICK HERE </a> to
-								view some of my work.
-							</p>
-						</article>
-						<article>
-							<h4>SOFTWARE ENGINEER INTERN, ACME TICKETING </h4>
-							<a href="https://www.acmeticketing.com/" class="image"><img
-									src="images/cpyrght_imgs/ACME.png" alt="" /></a>
-							<br clear="all" />
-							<br clear="all" />
-							<p> Programmed internal dev op tools and payment processor flows. </p>
 						</article>
 					</div>
 				</div>
