--- a/index.html
+++ b/index.html
@@ -106,6 +106,8 @@
 							<p> Designed Live Ops content for <a href="https://www.hiddenvariable.com/">Skullgirls Mobile</a> and worked on <br />
 								UI/UX, Level, and general Gameplay Design for <a href="https://spellomancer.com/">Spellomancer.</a>
 							</p>
+							<p><a href="https://github.com/tedglim/HVS/blob/main/README.md"> CLICK HERE </a> to view
+								some of my work.</p>
 						</article>
 						<article>
 							<h4>TECHNICAL DESIGNER, I GOT GAMES (IGG)</h4>
