--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
 							<br clear="all" />
 							<br clear="all" />
 							<p> Designed Live Ops content for <a href="https://www.hiddenvariable.com/">Skullgirls Mobile</a> and worked on <br />
-								UI/UX, Level, and general Gameplay Design for <a href="https://spellomancer.com/">Spellomancer.</a>
+								UI/UX, Level, and general Gameplay Design for <a href="https://spellomancer.com/">Spellomancer.</a> <br />
+								<a href="https://github.com/tedglim/HVS/blob/main/README.md"> CLICK HERE </a> to view
+								some of my work.
 							</p>
-							<p><a href="https://github.com/tedglim/HVS/blob/main/README.md"> CLICK HERE </a> to view
-								some of my work.</p>
 						</article>
 						<article>
 							<h4>TECHNICAL DESIGNER, I GOT GAMES (IGG)</h4>
