--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						</article>
 						<article>
 							<h4>TARGET BLASTER</h4>
-							<a href="https://simmer.io/@demastte/target-blaster" class="image"><img
+							<a href="https://demastte.itch.io/target-blaster" class="image"><img
 									src="gifs/FPSDemo.gif" alt="" /></a>
 							<br clear="all" />
 							<br clear="all" />
